--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <!--============================= Nav Bar Start==========================================-->
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-light py-3 px-2 sticky">
                 <div class="container-fluid">
@@ -44,40 +45,43 @@
                     </div>
                 </div>
                 <div>
-                    <button class="btn btn-outline-primary" type="submit">Registar</button>
+                    <button class="btn btn-outline-primary px-4" type="submit">Registar</button>
                 </div>
             </nav>
         </div>
+        <!--============================= Nav Bar End==========================================-->
+        <!--=============================Carousel Start==========================================-->
         <div class="container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h1 class="fs-1 fw-bolder">Get Started Digital <br> Learning</h1>
+                            <p class="fs-5">It is a long established fact that a reader will be distracted by the
+                                readable <br>
+                                content of a page when looking at its layout.</p>
+                            <div class="btn btn-primary">Get Started</div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="./images/cover/cover-2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                            <h1 class="fs-1 fw-bolder">Get Started Digital <br> Learning</h1>
+                            <p class="fs-5">It is a long established fact that a reader will be distracted by the
+                                readable <br>
+                                content of a page when looking at its layout.</p>
+                            <div class="btn btn-primary">Get Started</div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="./images/cover/cover-3.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <h1 class="fs-1 fw-bolder">Get Started Digital <br> Learning</h1>
+                            <p class="fs-5">It is a long established fact that a reader will be distracted by the
+                                readable <br>
+                                content of a page when looking at its layout.</p>
+                            <div class="btn btn-primary">Get Started</div>
                         </div>
                     </div>
                 </div>
@@ -93,7 +97,15 @@
                 </button>
             </div>
         </div>
+        <!--=============================Carousel End==========================================-->
     </header>
+    <main>
+        <!--=============================Courses section start==========================================-->
+        <section class="container">
+
+        </section>
+        <!--=============================Courses section end==========================================-->
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
