--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
         <!--============================= Nav Bar End==========================================-->
         <!--=============================Carousel Start==========================================-->
-        <div class="container">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="container mb-5">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
@@ -102,7 +102,126 @@
     <main>
         <!--=============================Courses section start==========================================-->
         <section class="container">
-
+            <div class="text-center my-5">
+                <h1>Discover Our Popular <br> Courses</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when looking at its layout.</p>
+            </div>
+            <div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="./images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.Some quick example text to build on the card title
+                                            and make up the bulk of the card.</p>
+                                        <p><b>Price : 20$</b></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="./images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Javascript Basic to advanced</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.Some quick example text to build on the card title
+                                            and make up the bulk of the card.</p>
+                                        <p><b>Price : 20$</b></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="./images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Fullstack Web Development</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.Some quick example text to build on the card title
+                                            and make up the bulk of the card.</p>
+                                        <p><b>Price : 20$</b></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="./images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Digital Marketing</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.Some quick example text to build on the card title
+                                            and make up the bulk of the card.</p>
+                                        <p><b>Price : 20$</b></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="./images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Photography Basic Rules</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.Some quick example text to build on the card title
+                                            and make up the bulk of the card.</p>
+                                        <p><b>Price : 20$</b></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="./images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Motion Graphics</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.Some quick example text to build on the card title
+                                            and make up the bulk of the card.</p>
+                                        <p><b>Price : 20$</b></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <div class="btn btn-outline-primary">View All</div>
+            </div>
         </section>
         <!--=============================Courses section end==========================================-->
     </main>
