--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EdTceh</title>
+    <title>EdTech</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -224,6 +224,48 @@
             </div>
         </section>
         <!--=============================Courses section end==========================================-->
+        <!--=============================Explore e-Learning section Start==========================================-->
+        <section class="container my-5">
+            <div>
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-5">
+                            <img src="./images/working.png" class="img-fluid rounded-start w-100" alt="...">
+                        </div>
+                        <div class="col-7">
+                            <div class="card-body m-5 px-5 pt-5">
+                                <h1 class="card-title fs-1 fw-bolder">Explore The elearning <br> Institute</h1>
+                                <p class="card-text fs-5">This is a wider card with supporting text below as a
+                                    natural
+                                    lead-in to additional content. This content is a little bit longer.This is a wider
+                                    card with supporting text below as a
+                                    natural
+                                    lead-in to additional content. This content is a little bit longer.This is a wider
+                                    card with supporting text below as a
+                                    natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex my-5">
+                                    <div class="me-5">
+                                        <h2>3.2K+</h2>
+                                        <p>Online Course</p>
+                                    </div>
+                                    <div class="mx-3">
+                                        <h2>600+</h2>
+                                        <p>Expert Member</p>
+                                    </div>
+                                    <div class="ms-5">
+                                        <h2>1K+</h2>
+                                        <p>Ratings & Review</p>
+                                    </div>
+                                </div>
+                                <div class="btn btn-outline-primary px-4">Read More</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--=============================Explore e-Learning section end==========================================-->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
