--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-light py-3 px-2 sticky">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><b>Pro Edu</b></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <a class="navbar-brand order-0" href="#"><b>Pro Edu</b></a>
+                    <button class="navbar-toggler order-2" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -43,10 +43,11 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="order-1 d-none d-md-block">
+                        <button class="btn btn-outline-primary px-4 ms-md-5" type="submit">Registar</button>
+                    </div>
                 </div>
-                <div>
-                    <button class="btn btn-outline-primary px-4" type="submit">Registar</button>
-                </div>
+
             </nav>
         </div>
         <!--============================= Nav Bar End==========================================-->
@@ -229,13 +230,13 @@
             <div>
                 <div class="card mb-3">
                     <div class="row g-0">
-                        <div class="col-5">
+                        <div class="col-sm-12 col-md-5">
                             <img src="./images/working.png" class="img-fluid rounded-start w-100" alt="...">
                         </div>
-                        <div class="col-7">
-                            <div class="card-body m-5 px-5 pt-5">
-                                <h1 class="card-title fs-1 fw-bolder">Explore The elearning <br> Institute</h1>
-                                <p class="card-text fs-5">This is a wider card with supporting text below as a
+                        <div class="col-sm-12 col-md-7">
+                            <div class="card-body m-md-5 px-md-5 pt-md-5 m-sm-0 px-sm-0 pt-sm-0">
+                                <h1 class="card-title">Explore The elearning <br> Institute</h1>
+                                <p class="card-text">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content. This content is a little bit longer.This is a wider
                                     card with supporting text below as a
@@ -245,16 +246,16 @@
                                     natural
                                     lead-in to additional content. This content is a little bit longer.</p>
                                 <div class="d-flex my-5">
-                                    <div class="me-5">
-                                        <h2>3.2K+</h2>
+                                    <div class="me-sm-0 me-md-5">
+                                        <h3>3.2K+</h3>
                                         <p>Online Course</p>
                                     </div>
-                                    <div class="mx-3">
-                                        <h2>600+</h2>
+                                    <div class="mx-sm-0 mx-md-3">
+                                        <h3>600+</h3>
                                         <p>Expert Member</p>
                                     </div>
-                                    <div class="ms-5">
-                                        <h2>1K+</h2>
+                                    <div class="ms-sm-0 ms-md-5 ">
+                                        <h3>1K+</h3>
                                         <p>Ratings & Review</p>
                                     </div>
                                 </div>
@@ -266,6 +267,68 @@
             </div>
         </section>
         <!--=============================Explore e-Learning section end==========================================-->
+        <!--=============================Ready to join section Start==========================================-->
+        <section class="container bg-primary rounded-4 d-flex align-items-center p-5 my-5">
+            <div class="row">
+                <div class="col-10 text-white">
+                    <h1>Ready To Join?</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when
+                        looking at its layout.</p>
+                </div>
+                <div class="col-2">
+                    <button type="button" class="btn btn-warning my-5 mx-auto px-4" data-bs-toggle="modal"
+                        data-bs-target="#ModalForm">
+                        Registar
+                    </button>
+
+                    <!-- Modal Form -->
+                    <div class="modal fade" id="ModalForm" tabindex="-1" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <!-- Login Form -->
+                                <form action="">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">Modal Login Form</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="mb-3">
+                                            <label for="Username">Username<span class="text-danger">*</span></label>
+                                            <input type="text" name="username" class="form-control" id="Username"
+                                                placeholder="Enter Username">
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <label for="Password">Password<span class="text-danger">*</span></label>
+                                            <input type="password" name="password" class="form-control" id="Password"
+                                                placeholder="Enter Password">
+                                        </div>
+                                        <div class="mb-3">
+                                            <input class="form-check-input" type="checkbox" value="" id="remember"
+                                                required>
+                                            <label class="form-check-label" for="remember">Remember Me</label>
+                                            <a href="#" class="float-end">Forgot Password</a>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer pt-4">
+                                        <button type="button" class="btn btn-success mx-auto w-100">Login</button>
+                                    </div>
+                                    <p class="text-center">Not yet account, <a href="#">Signup</a></p>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--=============================Ready to join section end==========================================-->
+        <!--=============================Successful Students Start==========================================-->
+        <section class="container">
+
+        </section>
+        <!--=============================Successful Students end==========================================-->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
