--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>EdTech</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/6f34808dca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -289,7 +290,7 @@
                                 <!-- Login Form -->
                                 <form action="">
                                     <div class="modal-header">
-                                        <h5 class="modal-title">Modal Login Form</h5>
+                                        <h5 class="modal-title">Registration Form</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
@@ -325,10 +326,138 @@
         </section>
         <!--=============================Ready to join section end==========================================-->
         <!--=============================Successful Students Start==========================================-->
-        <section class="container">
-
+        <section class="container mb-5">
+            <div class="text-center">
+                <h1>Meet Our Successfull <br> Students</h1>
+                <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page
+                    when looking at its layout.</p>
+            </div>
+            <div>
+                <div class="row">
+                    <div class="col-3">
+                        <div class="card">
+                            <img src="./images/student/student-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4>Awlad Hossain</h4>
+                                <p class="card-text">UIUX Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card">
+                            <img src="./images/student/student-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4>Jannatul Islam</h4>
+                                <p class="card-text">Motion Design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card">
+                            <img src="./images/student/student-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4>Imran Hossain</h4>
+                                <p class="card-text">Graphic Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card">
+                            <img src="./images/student/student-4.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4>Nishi Akter</h4>
+                                <p class="card-text">Web Developer</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center my-5">
+                <div class="btn btn-outline-primary">View All</div>
+            </div>
         </section>
         <!--=============================Successful Students end==========================================-->
+        <!--=============================Students feedback Start==========================================-->
+        <section class="container mb-5">
+            <div>
+                <div class="text-center">
+                    <h1>Some Students Feedback</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable <br> content of a
+                        page when looking at its layout.</p>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title d-flex justify-content-between">
+                                    <div>
+                                        <img src="./images/comma.png" class="img-fluid" alt="">
+                                    </div>
+                                    <div>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-regular fa-star text-warning"></i>
+                                    </div>
+                                </h5>
+                                <p class="card-text">There are many variations of passages of Lorem Ipsum available, but
+                                    <br>
+                                    the majority have suffered alteration in some form, by injected <br> humour, or
+                                    randomised words which don't look even slightly <br> believable. If you are going to
+                                    use
+                                    a passage of Lorem.
+                                </p>
+                                <div class="d-flex">
+                                    <div>
+                                        <img class="img-fluid" src="./images/student/student-5.png" alt="">
+                                    </div>
+                                    <div class="mx-2">
+                                        <h5>Awlad Hossain</h5>
+                                        <p>UI Designer</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title d-flex justify-content-between">
+                                    <div>
+                                        <img src="./images/comma.png" class="img-fluid" alt="">
+                                    </div>
+                                    <div>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-regular fa-star text-warning"></i>
+                                    </div>
+                                </h5>
+                                <p class="card-text">There are many variations of passages of Lorem Ipsum available, but
+                                    <br>
+                                    the majority have suffered alteration in some form, by injected <br> humour, or
+                                    randomised words which don't look even slightly <br> believable. If you are going to
+                                    use
+                                    a passage of Lorem.
+                                </p>
+                                <div class="d-flex">
+                                    <div>
+                                        <img class="img-fluid" src="./images/student/student-6.png" alt="">
+                                    </div>
+                                    <div class="mx-2">
+                                        <h5>Shanta Akter</h5>
+                                        <p>Graphic Designer</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--=============================Students feedback end==========================================-->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
