--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <!--============================= Nav Bar Start==========================================-->
         <div class="container">
-            <nav class="navbar navbar-expand-lg bg-light py-3 px-2 sticky">
+            <nav class="navbar navbar-expand-lg bg-light py-3 px-2 shadow">
                 <div class="container-fluid">
                     <a class="navbar-brand order-0" href="#"><b>Pro Edu</b></a>
                     <button class="navbar-toggler order-2" type="button" data-bs-toggle="collapse"
@@ -542,6 +542,28 @@
         </section>
         <!--=============================Trusted company section end==========================================-->
     </main>
+    <!-- ================================footer section start================================================  -->
+    <footer class="bg-black">
+        <div class="py-5">
+            <div class="text-center text-white">
+                <h1>Pro Edu</h1>
+                <p>Office 41, Zawaya Buildin, Ghala Muscat, <br>
+                    Sultanate of Oman.</p>
+                <p>Privacy Ploicy | Terms of use</p>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a href="https://www.facebook.com/anikahammedkhan.99" target="_blank" class="mx-2 fs-4"><i
+                        class="fa-brands fa-facebook"></i></a>
+                <a href="https://twitter.com/anikahamedkhan" target="_blank" class="mx-2 fs-4"><i
+                        class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/anikahammedkhan/" target="_blank" class="mx-2 fs-4"><i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.tiktok.com/en/" target="_blank" class="mx-2 fs-4"><i
+                        class="fa-brands fa-tiktok"></i></a>
+            </div>
+        </div>
+    </footer>
+    <!-- ================================footer section end================================================  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
